--- a/content/issues/2025-05-06-test.md
+++ b/content/issues/2025-05-06-test.md
@@ -6,7 +6,7 @@ resolved: false
 # Possible severity levels: down, disrupted, notice
 severity: disrupted
 affected:
-  - API
+  - DS4-Update-Server
 section: issue
 ---
 
